@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.ttrssreader"
     android:installLocation="auto"
-    android:versionCode="1350"
+    android:versionCode="1351"
     android:versionName="1.35" >
 
     <uses-sdk
