@@ -18,6 +18,12 @@
 <resources>
 
     <string-array name="updates">
+        <item>Version 1.35
+            \n * Articles are again marked as read when beeing read in the webinterface as long as there are new articles to be synced (API doesn't offer "changes since date/time", I can only guess what has changed)
+            \n * Added long-press menu in Article-List: "Mark everything above as read"
+            \n * Another attempt at fixing the IllegalStateExceptions
+            \n * Small bugfixes
+            \n * I ned help regarding the SQLiteException "cannot commit transaction - SQL statements in progress: COMMIT;", please contact me if you think you can give any advice on this issue.</item>
         <item>Version 1.34
             \n * Fixed some DB issues regarding closed cursors
             \n * Fixed automatic refresh of labels on startup
